proxmox/traefik/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: traefik
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: traefik
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-http
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`k8s-worker-04`)
    kind: Rule
    # middlewares:
    # - name: traefik-redirect-to-https
    #   namespace: traefik
    services:
    - name: nginx
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-https
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`k8s-worker-04`)
    kind: Rule
    services:
    - name: nginx
      port: 80
  tls:
    certResolver: letsencrypt

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-https-2
  namespace: traefik
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match: Host(`nginx.apps.cardosoconsultoria.com.br`)
    kind: Rule
    services:
    - name: nginx
      port: 80
  # tls:
  #   certResolver: letsencrypt
